--- a/src/input.css
+++ b/src/input.css
@@ -12,7 +12,7 @@ body {
 }
 
 .hamburger-line {
-  @apply my-2 block h-[2px] w-[30px] bg-dark;
+  @apply my-2 block h-[2px] w-[30px] bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
